doucment detail in {{assetbaseUrl}}/api/asset/v1/userlinks/master-data/all?userId={{targetUserId}}